# vulcast-rtc

./: .gitignore  Cargo.toml  Dockerfile  README.MD  cross.sh  log.txt
vulcast-rtc/: Cargo.toml
vulcast-rtc-sys/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  build.sh  env.sh
vulcast-rtc-sys/examples/: video_capture.rs
vulcast-rtc-sys/prebuilt/aarch64-unknown-linux-gnu/debug/cmake/glog/: glog-targets.cmake
vulcast-rtc-sys/prebuilt/aarch64-unknown-linux-gnu/debug/pkgconfig/: libglog.pc
vulcast-rtc-sys/prebuilt/aarch64-unknown-linux-gnu/pkgconfig/: libglog.pc
vulcast-rtc-sys/prebuilt/aarch64-unknown-linux-gnu/release/pkgconfig/: libglog.pc
vulcast-rtc-sys/prebuilt/armv7-unknown-linux-gnueabihf/debug/pkgconfig/: libglog.pc
vulcast-rtc-sys/prebuilt/armv7-unknown-linux-gnueabihf/release/pkgconfig/: libglog.pc
vulcast-rtc-sys/prebuilt/x86_64-unknown-linux-gnu/debug/cmake/glog/: glog-targets.cmake
vulcast-rtc-sys/prebuilt/x86_64-unknown-linux-gnu/debug/pkgconfig/: libglog.pc
vulcast-rtc-sys/prebuilt/x86_64-unknown-linux-gnu/pkgconfig/: libglog.pc
vulcast-rtc-sys/prebuilt/x86_64-unknown-linux-gnu/release/pkgconfig/: libglog.pc
vulcast-rtc-sys/src/: CMakeLists.txt  broadcaster.cpp  broadcaster.hpp  ffi.hpp  foreign_frame_generator.cpp  foreign_frame_generator.hpp  lib.rs  main.cpp  media_stream_track_factory.cpp  media_stream_track_factory.hpp  signaller.cpp  signaller.hpp  wrapper.cpp  wrapper.hpp
vulcast-rtc-sys/src/rpi/: config_media.cc  config_media.h  frame_queue.cc  frame_queue.h  mmal_wrapper.cc  mmal_wrapper.h  raspi_encoder.cc  raspi_encoder.h  raspi_encoder_impl.cc  raspi_encoder_impl.h  wstreamer_types.cc  wstreamer_types.h
vulcast-rtc-sys/src/rpi/compat/: optionsfile.cc  optionsfile.h
vulcast-rtc-sys/src/rpi/def/: config_media.def
vulcast-rtc/examples/datalat/: graphql_signaller.rs  main.rs
vulcast-rtc/examples/echo/: controller_message.rs  echo_frame_source.rs  graphql_signaller.rs  main.rs  signal_query.gql  signal_schema.rs
vulcast-rtc/examples/schema/: signal_query.gql
vulcast-rtc/examples/vcm/: graphql_signaller.rs  main.rs  signal_schema.gql
vulcast-rtc/src/: alsa_capturer.rs  broadcaster.rs  data_channel.rs  data_consumer.rs  foreign_producer.rs  frame_source.rs  lib.rs  types.rs  vcm_capturer.rs
