[package]
name = "vulcast-rtc-sys"
version = "0.2.0"
authors = ["Gordon Guan <admin@netdex.org>"]
edition = "2018"
links = "vulcast-rtc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
link-cplusplus = { version = "1.0" }

[dev-dependencies]

[build-dependencies]
bindgen = "0.59.2"
cmake = "0.1"