[package]
name = "vulcast-rtc"
version = "0.1.0"
authors = ["Gordon Guan <admin@netdex.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulcast-rtc-sys = { path="../vulcast-rtc-sys" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
derive_more = "0.99"
libc = "0.2"