[package]
name = "vulcast-rtc"
version = "0.1.0"
authors = ["Gordon Guan <admin@netdex.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulcast-rtc-sys = { path = "../vulcast-rtc-sys" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
derive_more = "0.99"
lazy_static = "1.4.0"

[dev-dependencies]
graphql_client = "0.9"
graphql-ws = { version = "0.3", git = "https://github.com/Netdex/graphql-ws" }
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
rustls = { version = "0.19", features = ["dangerous_configuration"] }
http = "0.2"
clap = "3.0.0-beta.2"
webpki = "0.21.0"
