[package]
name = "vulcast-rtc"
version = "0.2.0"
authors = ["Gordon Guan <admin@netdex.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulcast-rtc-sys = { path = "../vulcast-rtc-sys" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
derive_more = "0.99"
log = "0.4"
async-trait = "0.1.50"
thiserror = "1"

[dev-dependencies]
graphql_client = "0.10"
graphql-ws = { version = "0.4", git = "https://github.com/Netdex/graphql-ws" }
tokio-tungstenite = { version = "0.16", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.20", features = ["dangerous_configuration"] }
http = "0.2"
clap = { version = "3.0.0-rc.11", features = ["derive"] }
webpki = "0.22.0"
env_logger = "0.9"
bitflags = "1.2"
tiny-skia = "0.6.2"
font8x8 = "0.3.1"
